# primerblast-oss

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.ja.md  README.md  pyproject.toml
.github/: AUDIT_TRIGGER.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/scripts/: post_integration_audit.py
.github/workflows/: audit-run.yml  benchmark.yml  ci.yml
benchmarks/: RESULTS.md  assay_caps.bed  assay_caps.csv  assay_caps.html  assay_caps.json  assay_gene.json  at1_5mb.fa  continuous_benchmark.py  example_report.json  example_template.fa  head_to_head_ps2.py  multi_targets.fa  ncbi_live_regression.json  run_benchmark.py  synthetic_variants.vcf
primerblast_oss/: __init__.py  assay.py  bed.py  caps.py  cli.py  dcaps_workflow.py  design.py  dimers.py  genome.py  gff3.py  outputs.py  pipeline.py  provenance.py  regions.py  report.py  risk.py  specificity.py  thermo.py  tiling.py  tools.py  variants.py  vcf.py
primerblast_oss/webapp/: __init__.py  __main__.py  server.py
primerblast_oss/webapp/static/: index.html
tests/: test_caps_dcaps_workflow.py  test_integration.py  test_per_db_thermo.py  test_post_integration_audit.py  test_regressions.py  test_search_completeness.py  test_specificity.py
